Se agrega pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,12 +32,12 @@ jobs:
         githubchangeloggenerator/github-changelog-generator \
         -u ${{ github.repository_owner }} \
         -p ${{ github.event.repository.name }} \
-        -o ${{ github.workspace }}/CHANGELOG.md
+        -o build/CHANGELOG.md
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
-          body_path: ${{ github.workspace }}/CHANGELOG.md
+          body_path: build/CHANGELOG.md
           tag_name: ${{ github.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
           draft: false
