--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
       run: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o builder-cli-windows.exe .
 
     - name: Generate changelog
+      if: startsWith(github.ref, 'refs/tags/')
       run: |
         docker run --rm -v "$(pwd)":/usr/local/src/ \
         -e CHANGELOG_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
@@ -34,8 +35,10 @@ jobs:
         -u ${{ github.repository_owner }} \
         -p ${{ github.event.repository.name }} \
         -o /usr/local/src/CHANGELOG.md
-    - name: List files in current directory
-      run: ls -la
+    
+    - name: Print CHANGELOG contents
+      if: startsWith(github.ref, 'refs/tags/')
+      run: cat CHANGELOG.md
 
     - name: Create GitHub Release
       id: create_release
@@ -50,6 +53,7 @@ jobs:
 
     - name: Upload Linux binary to release
       uses: actions/upload-release-asset@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./builder-cli-linux
@@ -59,6 +63,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload Windows binary to release
+      if: startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
