--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,11 +45,13 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-          body_path: CHANGELOG.md
+          #body_path: CHANGELOG.md
           tag_name: ${{ github.ref_name }}
           token: ${{ secrets.GITHUB_TOKEN }}
           draft: false
           prerelease: false
+          generate_release_notes: true
+
 
     - name: Upload Linux binary to release
       uses: actions/upload-release-asset@v1
