--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,32 +1,30 @@
-name: Build and Release
+name: Release
 
 on:
   push:
-    tags: [ "*" ]
+    tags:
+      - '[0-9]+.[0-9]+.[0-9]+'  # Semver pattern (e.g., 1.0.3)
 
 jobs:
-  build-and-release:
+  release:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
+    - name: Download builder-cli-linux from artifacts
+      uses: actions/download-artifact@v2
       with:
-        go-version: 1.21.3
+        name: builder-cli-linux
+        path: ./builder-cli-linux
 
-    - name: Install dependencies
-      run: go mod download
-
-    - name: Build Linux binary
-      run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o builder-cli-linux .
-      
-    - name: Build Windows binary
-      run: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o builder-cli-windows.exe .
+    - name: Download builder-cli-windows.exe from artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: builder-cli-windows.exe
+        path: ./builder-cli-windows.exe
 
     - name: Generate changelog
-      if: startsWith(github.ref, 'refs/tags/')
       run: |
         docker run --rm -v "$(pwd)":/usr/local/src/ \
         -e CHANGELOG_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
@@ -42,9 +40,7 @@ jobs:
     - name: Create GitHub Release
       id: create_release
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
       with:
-          #body_path: CHANGELOG.md
           tag_name: ${{ github.ref_name }}
           token: ${{ secrets.GITHUB_TOKEN }}
           draft: false
@@ -54,7 +50,6 @@ jobs:
 
     - name: Upload Linux binary to release
       uses: actions/upload-release-asset@v1
-      if: startsWith(github.ref, 'refs/tags/')
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./builder-cli-linux
@@ -64,7 +59,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload Windows binary to release
-      if: startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
