--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    env:
+      BINARY_NAME_LINUX: builder-cli-linux  # Definimos la variable aquí
+      BINARY_NAME_WINDOWS: builder-cli-windows.exe
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -21,10 +24,10 @@ jobs:
       run: go mod download
 
     - name: Build Linux binary
-      run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o builder-cli-linux .
+      run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ${{ env.BINARY_NAME_LINUX }} .
       
     - name: Build Windows binary
-      run: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o builder-cli-windows.exe .
+      run: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o ${{ env.BINARY_NAME_WINDOWS }} .
     
     - name: Create GitHub Release
       id: create_release
@@ -40,8 +43,8 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./builder-cli-linux
-        asset_name: builder-cli-linux
+        asset_path: ./${{ env.BINARY_NAME_LINUX }}
+        asset_name: ${{ env.BINARY_NAME_LINUX }}
         asset_content_type: application/octet-stream
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -50,8 +53,8 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./builder-cli-windows.exe
-        asset_name: builder-cli-windows.exe
+        asset_path: ./${{ env.BINARY_NAME_WINDOWS }}
+        asset_name: ${{ env.BINARY_NAME_WINDOWS }}
         asset_content_type: application/octet-stream
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
