--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Install dependencies
         run: go mod download   
       - name: Test
-        run: go test -v ./...
+        run: go test -v ./... -coverprofile=coverage
+      - name: Show coverage
+        run: go tool cover -func=coverage
   build:
     runs-on: ubuntu-latest
     needs: test
