--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -24,6 +24,14 @@ jobs:
         run: go test -v ./... -coverprofile=coverage
       - name: Show coverage
         run: go tool cover -func=coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage
+          flags: unittests
+          name: codecov
+          fail_ci_if_error: false
   build:
     runs-on: ubuntu-latest
     needs: test
