--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
             generate_release_notes: true 
   build:
     name: Build on ${{ matrix.os }} (${{ matrix.arch }}) with ${{ matrix.tag }} tag
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     needs: create_release
     env:
       BINARY_NAME: builder-cli
